# party-quiz

./: .gitignore  CMakeLists.txt  Makefile  README.md  format.sh
.github/workflows/: Build.yml
pages/: index.html  player.css  player.html  player.js  playerInit.html  scoreboard.css  scoreboard.html  scoreboard.js  scoreboardInit.html
src/: actor.h  callbacks.h  game.cpp  game.h  listener.cpp  listener.h  main.cpp  pages.h  player.cpp  player.h  question.cpp  question.h  randomgenerator.cpp  randomgenerator.h  referee.cpp  referee.h  server.cpp  server.h  session.cpp  session.h  utils.cpp  utils.h
src/game/: game.cpp  game.h  gameconfig.h  player.cpp  player.h  question.cpp  question.h  questionsgenerator.cpp  questionsgenerator.h  randomgenerator.cpp
src/server/: callbacks.h  http_session.cpp  http_session.h  listener.cpp  listener.h  pages.h  server.cpp  server.h  session.cpp  utils.cpp  utils.h  websocket_session.cpp  websocket_session.h
